// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should render with freeShipping 1`] = `
<div
  className="sc-1vcrerw-0 fyisJe"
  onClick={[Function]}
>
  <div
    className="sc-1vcrerw-1 gJbBzo"
  >
    <img
      alt="Macbook pro retina 2020 casi nuevo completo unico fabuloso!"
      className="sc-1vcrerw-2 cYsGKr"
      src="https://picsum.photos/id/180/180/180"
    />
  </div>
  <div
    className="sc-1vcrerw-3 gnaNrs"
  >
    <div
      className="sc-1vcrerw-4 dLhRGj"
    >
      <h3
        className="sc-1hvrgbn-2 cQOGsr"
        color="normal"
        fontWeight="normal"
        type="h3"
      >
        $
        1980
        <div
          className="sc-1vcrerw-5 fIzIbk"
        />
      </h3>
      <p
        className="sc-1hvrgbn-3 kUhjhB"
        color="normal"
        fontWeight="normal"
        type="medium"
      >
        Macbook pro retina 2020 casi nuevo completo unico fabuloso!
      </p>
    </div>
    <div
      className="sc-1vcrerw-6 bSwEdh"
    >
      <p
        className="sc-1hvrgbn-6 gGGelS"
        color="normal"
        fontWeight="normal"
        type="small"
      >
        Mendoza
      </p>
    </div>
  </div>
</div>
`;

exports[`ProductCard should render without freeShipping 1`] = `
<div
  className="sc-1vcrerw-0 fyisJe"
  onClick={[Function]}
>
  <div
    className="sc-1vcrerw-1 gJbBzo"
  >
    <img
      alt="Macbook pro retina 2020 casi nuevo completo unico fabuloso!"
      className="sc-1vcrerw-2 cYsGKr"
      src="https://picsum.photos/id/180/180/180"
    />
  </div>
  <div
    className="sc-1vcrerw-3 gnaNrs"
  >
    <div
      className="sc-1vcrerw-4 dLhRGj"
    >
      <h3
        className="sc-1hvrgbn-2 cQOGsr"
        color="normal"
        fontWeight="normal"
        type="h3"
      >
        $ 1980
      </h3>
      <p
        className="sc-1hvrgbn-3 kUhjhB"
        color="normal"
        fontWeight="normal"
        type="medium"
      >
        Macbook pro retina 2020 casi nuevo completo unico fabuloso!
      </p>
    </div>
    <div
      className="sc-1vcrerw-6 bSwEdh"
    >
      <p
        className="sc-1hvrgbn-6 gGGelS"
        color="normal"
        fontWeight="normal"
        type="small"
      >
        Mendoza
      </p>
    </div>
  </div>
</div>
`;
